--- a/client/src/views/newEntry/NewEntry.module.css
+++ b/client/src/views/newEntry/NewEntry.module.css
@@ -3,5 +3,10 @@
         display: flex;
         flex-direction: column;
     }
+    .message{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
     
 }
