--- a/client/src/views/home/Home.module.css
+++ b/client/src/views/home/Home.module.css
@@ -1,5 +1,5 @@
 @media (max-width: 578px) {
-  .container {
+  .containerHome {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,3 +21,11 @@
       justify-content: space-around;
   }
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
