--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -1,32 +1,12 @@
-.container{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(235, 249, 252);
-}
-.list{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    
+.container {
+  height: 80px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background: lightcyan;
+  justify-content: space-between;
 }
 
-.itemList{
-    width: 100px;
-    list-style:none;
-    
-}
-
-.option{
-    color: rgb(0, 0, 0);
-    font-size: 1.3rem;
-    text-align: center;
-    margin:0
-}
-
-.link{
-    text-decoration: none;
+.logo{
+    margin-left: 40px;
 }
