--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -3,10 +3,15 @@
   width: 100%;
   display: flex;
   align-items: center;
-  background: lightcyan;
+  background: rgb(0, 0, 0);
   justify-content: space-between;
+  border-bottom: 5px solid rgb(94, 36, 255);
+  
 }
 
 .logo{
     margin-left: 40px;
+    color: white;
+    font-family: 'Bakbak One', cursive;
+    letter-spacing: 2px;
 }
