--- a/client/src/components/buttons/Buttons.module.css
+++ b/client/src/components/buttons/Buttons.module.css
@@ -1,17 +1,19 @@
-@media(max-width: 578px){
-    .container {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        margin-top: 25px;
-    }
-
-    .button{
-        height: 30px;
-        width: 90px;
-        background-color: green;
-        border-radius: 5px;
-        color: white;
-    }
+.container {
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+    justify-content: center;
+}
+.button{
+    height: 30px;
+    width: 85px;
+    color:white;
+    background: rgb(0, 0, 0);
+    border-radius: 5px;
+    border: 3px solid rgb(94, 36, 255);
+    cursor: pointer;
+    margin: 0 50px;
+}
+.button:hover{
+    background: rgba(0, 0, 0, 0.644);
 }
