--- a/client/src/components/tableEntry/TableEntry.module.css
+++ b/client/src/components/tableEntry/TableEntry.module.css
@@ -1,5 +1,30 @@
-@media(max-width: 578px){
-    .rows{
+.button{
+    height: 20px;
+    width: 65px;
+    color:white;
+    background: rgb(0, 0, 0);
+    border-radius: 5px;
+    border: 3px solid rgb(94, 36, 255);
+    cursor: pointer;
+    margin: 0 5px;
+}
+.button:hover{
+    background: rgba(0, 0, 0, 0.644);
+}
 
+.containerTable{
+    width: 80%;
+    border: 1px solid rgb(94, 36, 255)
+}
+
+.head{
+   width: 25%;
+   text-align: center;
+   border: 1px solid #000;
+}
+
+@media(max-width: 768px){
+    .head{
+        width: 30%
     }
 }
