--- a/client/src/views/newEntry/NewEntry.module.css
+++ b/client/src/views/newEntry/NewEntry.module.css
@@ -1,12 +1,36 @@
+.container{
+    display: flex;
+    
+    justify-content: center;
+}
+.message{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.containerTable{
+    margin: 150px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 @media(max-width: 578px){
     .container{
         display: flex;
         flex-direction: column;
-    }
-    .message{
-        width: 100%;
-        display: flex;
         justify-content: center;
     }
-    
+
+    .containerTable{
+        margin: 30px 80px;
+
+    }
 }
