--- a/client/src/components/tableEntry/TableEntry.module.css
+++ b/client/src/components/tableEntry/TableEntry.module.css
@@ -13,7 +13,7 @@
 }
 
 .containerTable{
-    width: 100%;
+    width: 500px;;
     border: 1px solid rgb(94, 36, 255)
 }
 
@@ -26,5 +26,9 @@
 @media(max-width: 768px){
     .head{
         width: 30%
+    }
+    .containerTable{
+        width: 500px;;
+        border: 1px solid rgb(94, 36, 255)
     }
 }
