--- a/client/src/components/addEntry/AddEntry.module.css
+++ b/client/src/components/addEntry/AddEntry.module.css
@@ -67,7 +67,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 80%
+        width: 250px;
     }
 
 
